from 2.5.16 to 2.5.17
- bug fix: dar failed to restore EA when file permission to restore
  did not included user write access. Fix consists in temporarily
  adding user write access in order to restore EA and removing this
  extra permission afterward if necessary
- updated FAQ
- fixed typo in dar man page

from 2.5.15 to 2.5.16
- bug fix: while rechecking sparse file (-ah option) during a merging
  operation, dar wrongly reported CRC mismatch for saved plain files
- fixed man page about sparse-file handling while merging: To remove
  sparse file datastructure during a merging operation you need to
  set --sparse-file-min-size to a valuer larger than all file sizes
  contained in the archive (for example 1E for one exabyte)
- bug fix: met when using compression and creating the archive to
  dar's standard output (ssh) and leading files to be corrupted in the
  archive and reported as such.
- optimisation of escape_sequence skippability (avoids trying skipping
  and failing for some corner cases, when we can detect it does even
  not worth trying)

from 2.5.14-bis to 2.5.15
- fixing self report bug message met when trying to create an isolated
  catalogue into a directory that does not exist
- adding slice overwriting verification before creating a isolated
  catalogue, to be coherent with other operations creating an archive
  (backup and merging)
- storage size of compressed files was often wrongly stored in archive
  (shorter than reality), the only impact took place at archive listing
  time where the compression ratio displayed was better than reality
- fixed auto-detected bug condition triggered when -Tslicing is used
  with --sequential-read. Both options are not compatible and have been
  excluded by a nicer message than this auto-detection bug message.

from 2.5.14 to 2.5.14-bis
- avoiding using the syncfs() system call in dar_split when the
  platform does not support it (replacing it by sync() in that case
  for compilation to be successful)
