@@ -1,7 +1,7 @@
 version 2.5.17
 --------------
 Thanks to Calestyo for bug report and feedbacks, thanks to Mateusz
-Konieczny for feedback.
+Konieczny for feedback. Thanks to Felix Leimbach for bug report.
 
 version 2.5.16
 --------------
