@@ -433,6 +433,8 @@ namespace libdar
 			throw Esystem("fichier_local::open", tools_strerror_r(errno), Esystem::io_absent);
 		    case EACCES:
 			throw Esystem("fichier_local::open", tools_strerror_r(errno), Esystem::io_access);
+		    case EROFS:
+			throw Esystem("fichier_local::open", tools_strerror_r(errno), Esystem::io_ro_fs);
 		    default:
 			throw Erange("fichier_local::open", string(gettext("Cannot open file : ")) + tools_strerror_r(errno));
 		    }
