@@ -5,6 +5,7 @@ from 2.5.16 to 2.5.17
   extra permission afterward if necessary
 - updated FAQ
 - fixed typo in dar man page
+- fixed bug met when writing slices to a read-only filesystem
 
 from 2.5.15 to 2.5.16
 - bug fix: while rechecking sparse file (-ah option) during a merging
